<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <profiles>
        <profile>
            <id>jdk18</id>
            <activation>
                <activeByDefault>true</activeByDefault>
                <jdk>1.8</jdk>
            </activation>
            <properties>
                <maven.compiler.source>1.8</maven.compiler.source>
                <maven.compiler.target>1.8</maven.compiler.target>
                <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
            </properties>
        </profile>
    </profiles>
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.laiyefei.project</groupId>
    <artifactId>original-soil</artifactId>
    <packaging>pom</packaging>
    <version>v1.0.0-SNAPSHOT</version>
    <name>源端</name>
    <modules>
        <module>soil-standard</module>
        <module>soil-standard-spread</module>
        <module>soil-dependencies</module>
        <module>soil-equip</module>
        <module>soil-common</module>
        <module>soil-die</module>
        <module>soil-middleware</module>
        <module>soil-whole</module>
    </modules>
    <properties>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <soil.default.version>v1.0.0-SNAPSHOT</soil.default.version>

        <lombok.version>1.18.12</lombok.version>
        <maven.plugin.version>3.8.1</maven.plugin.version>

        <spring.version>5.2.9.RELEASE</spring.version>

        <springboot.version>2.3.2.RELEASE</springboot.version>
        <springboot.mybatis.version>1.3.2</springboot.mybatis.version>
        <springboot.mybatisplus.version>3.4.0</springboot.mybatisplus.version>

        <spring-boot-starter.swagger.version>1.9.0.RELEASE</spring-boot-starter.swagger.version>

        <mysql.connector.version>8.0.21</mysql.connector.version>

        <springcloud.version>Hoxton.RELEASE</springcloud.version>

        <alibaba.springcloud.version>2.2.0.RELEASE</alibaba.springcloud.version>

        <apache.httpclient.version>4.5.6</apache.httpclient.version>

    </properties>
    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
    </dependencies>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>

            <!-- region 项目包版本管理 -->
            <dependency>
                <groupId>com.laiyefei.project</groupId>
                <artifactId>soil-standard</artifactId>
                <version>${soil.default.version}</version>
            </dependency>
            <dependency>
                <groupId>com.laiyefei.project</groupId>
                <artifactId>soil-standard-spread</artifactId>
                <version>${soil.default.version}</version>
            </dependency>
            <!-- endregion -->

            <!-- region  第三方框架依赖包管理 -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${springboot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- endregion -->

            <!-- region 第三方包依赖管理 -->
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-core</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-autoconfigure</artifactId>
                <version>${springboot.version}</version>
            </dependency>
            <!-- endregion -->

        </dependencies>
    </dependencyManagement>
    <build>
        <plugins>
            <!--            <plugin>-->
            <!--                <groupId>com.spotify</groupId>-->
            <!--                <artifactId>docker-maven-plugin</artifactId>-->
            <!--                <version>1.0.0</version>-->
            <!--            </plugin>-->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${springboot.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.plugin.version}</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <!-- region project-infrastructure/repository maven 仓库 -->
    <distributionManagement>
        <snapshotRepository>
            <id>repository-snapshot</id>
            <name>repository-snapshot</name>
            <layout>default</layout>
            <url>https://maven.pkg.github.com/project-infrastructure/repository-snapshot</url>
        </snapshotRepository>
        <repository>
            <id>repository-release</id>
            <name>repository-release</name>
            <layout>default</layout>
            <url>https://maven.pkg.github.com/project-infrastructure/repository-release</url>
        </repository>
    </distributionManagement>
    <repositories>
        <repository>
            <id>repository-snapshot</id>
            <url>https://maven.pkg.github.com/project-infrastructure/repository-snapshot</url>
        </repository>
        <repository>
            <id>repository-release</id>
            <url>https://maven.pkg.github.com/project-infrastructure/repository-release</url>
        </repository>
    </repositories>
    <!-- endregion -->
</project>